# neurolithe

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  neurolithe.toml
.github/workflows/: ci.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  introduction.md  quickstart.md
docs/src/architecture/: adaptive-forgetting.md  long-term-memory.md  overview.md  short-term-memory.md  sleep-pipeline.md
docs/src/mcp/: delete-tenant.md  export-tenant.md  get-ccl-layers.md  push-dialogue.md  query-memory.md  register-ccl.md  store-memory.md
docs/src/theory/: cognitive-psychology.md
src/: main.rs
src/application/: app.rs  mod.rs  retrieval.rs  session_manager.rs  sleep.rs
src/domain/: decay.rs  mod.rs  models.rs  ports.rs
src/domain/cognition/: conflict_resolver.rs  mod.rs
src/infrastructure/: config.rs  database.rs  llm.rs  mod.rs  repository.rs  schema.rs
src/interfaces/: mcp_server.rs  mcp_types.rs  mod.rs
