[package]
name = "neurolithe"
version = "0.1.0"
edition = "2024"
description = "A plug-and-play, embedded hybrid Graph-Vector database built in Rust and SQLite that gives AI agents human-like memory."
homepage = "https://neurolithe.com"
documentation = "https://docs.neurolithe.com"
repository = "https://github.com/neurolithe/neurolithe"
license = "MIT"
keywords = ["ai", "memory", "graph-database", "vector-search", "mcp"]
categories = ["database", "science"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
config = "0.15.19"
dotenvy = "0.15.7"
libsqlite3-sys = "0.36.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlite-vec = "0.1.6"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.25.0"
